# sre

./: .gitignore  404.html  about.html  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
docs/: about.md  index.md
docs/linux/: processes.md
linux/: processes.html
search/: search_index.js  search_index.json
